Enhance OAuth support and coverage

--- a/.env.example
+++ b/.env.example
@@ -39,7 +39,7 @@ GITHUB_REDIRECT_URI="${APP_URL}/auth/callback"
 
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
-AZURE_TENANT_ID=
+AZURE_TENANT_ID=common
 AZURE_REDIRECT_URI="${APP_URL}/auth/callback"
 
 FORM_BUILDER_STORAGE_DISK=local
