--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "laravel/framework": "^11.0",
         "laravel/passport": "^12.0",
         "laravel/socialite": "^5.14",
+        "socialiteproviders/azure": "^5.8",
         "spatie/laravel-permission": "^6.0",
         "guzzlehttp/guzzle": "^7.9"
     },
